장준녕커밋0100

--- a/src/main/resources/templates/corp/talentPool/offer.html
+++ b/src/main/resources/templates/corp/talentPool/offer.html
@@ -37,7 +37,7 @@
                     <div class="talent-profile" th:text="${ talent.name }"></div>
                     <div class="talent-info" 
                     th:text="|${talent.gender == 'M' ? '남' : (talent.gender == 'F' ? '여' : '기타')}
-                    ·${ talent.birthYear }년생|"></div>
+                    ·${ talent.birth }년생|"></div>
                 </div> 
                 
                 <div class="talent-right">
