--- a/src/main/resources/templates/user/job_posting/job_posting_detail.html
+++ b/src/main/resources/templates/user/job_posting/job_posting_detail.html
@@ -360,7 +360,7 @@ $(document).ready(function () {
             </div>
 
            <div class="company-intro">
-    <h2><strong>기업소개</strong></h2><br><br>
+    <h2><strong>|기업소개|</strong></h2><br><br>
     
     <div class="company-content">
         <img th:src="@{/images/corpimg/{img}(img=${jDto.corpImg})}" alt="기업 이미지"
