--- a/src/main/resources/static/user/jobPosting/css/job_posting_detail.css
+++ b/src/main/resources/static/user/jobPosting/css/job_posting_detail.css
@@ -79,9 +79,9 @@
 
         /* 제목 섹션 */
         .job_posting_title {
-            font-size: 28px;
+            font-size: 40px;
             font-weight: bold;
-            color: #2c3e50;
+            color: black;
             margin-bottom: 10px;
         }
 
@@ -189,7 +189,7 @@
             max-width: 700px;
             height: auto;
             padding: 20px;
-            background: #f8f9fa;
+            background: #e9ecef;
             border-radius: 8px;
             border: 1px solid #e9ecef;
         }
@@ -1035,10 +1035,8 @@
 }
 
   .job-section {
-    border: 1px solid #e0e0e0;
     padding: 20px;
     border-radius: 8px;
-    background-color: #fff;
     max-width: 760px; /* 조정 가능 */
     word-break: keep-all;
     line-height: 1.7;
