--- a/src/main/resources/templates/admin/admin_dashboard.html
+++ b/src/main/resources/templates/admin/admin_dashboard.html
@@ -76,9 +76,9 @@
     <canvas id="indChart"></canvas>
   </div>
   <div class="chart-box">
-  	<span>답장되지않은 문의 4개
+  	<span>답장되지않은 문의
   	&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-  	&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+  	&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 	<a href="#">전체보기</a>
 	</span>
   	<table class="table table-bordered table-fixed">
