--- a/src/main/resources/templates/admin/admin_resume.html
+++ b/src/main/resources/templates/admin/admin_resume.html
@@ -38,7 +38,7 @@
 
 /* 폼 요소 간격 */
 input[type="text"] {
-  width: 100%;
+  margin-bottom:20px;
   padding: 6px 10px;
   border: 1px solid #ced4da;
   border-radius: 5px;
