--- a/src/main/resources/templates/admin/admin_corp.html
+++ b/src/main/resources/templates/admin/admin_corp.html
@@ -17,14 +17,14 @@
 
 /* 검색 테이블 */
 form .table {
+	margin-bottom: 20px;
     background-color: white;
     margin-bottom: 20px;
 }
 
 /* 입력 필드 스타일 */
 form input[type="text"] {
-    width: 100%;
-    padding: 6px 10px;
+    padding: 6px 10px;margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
@@ -114,8 +114,7 @@ form input[type="submit"]:hover {
 <th:block th:replace="fragments/adminHeader :: adminHeader"></th:block>
 <div class="main">
 <form action="/admin_corp_search">
-<span>사업번호</span>
-<span></span><input type="text" id="corpNo" name="corpNo"/></span><br>
+<span>사업번호<input type="text" id="corpNo" name="corpNo"/></span>
 <span>이름</span>
 <span><input type="text" id="name" name="name"/></span><br>
 <span>업종</span>
